syntax = 'proto3';

package stocktrading;
option  java_multiple_files=true;
option java_package="com.javatechie.grpc";
option  java_outer_classname="StockTradingProto";

service StokeTradingService{
  rpc getStokePrice(StokeRequest) returns (StokeResponse);

  rpc subscribeStockPrice(StokeRequest) returns (stream StokeResponse);
}

message StokeRequest{
  string stock_symbol = 1;
}

message StokeResponse{
  string stock_symbol = 1;
  double price = 2;
  string timestamp = 3;
}